fix: correção de espaçamentos

--- a/index.html
+++ b/index.html
@@ -1,25 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br" class="light">
+
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Links</title>
     <link rel="stylesheet" href="style.css" />
-    <link
-      rel="shortcut icon"
-      href="./assets/envelope.svg"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="./assets/envelope.svg" type="image/x-icon" />
   </head>
+
   <body>
     <!-- profile -->
     <div id="container">
       <div id="profile">
-        <img
-          src="./assets/ft-pessoal.jpg"
-          alt="Foto de Danilo Borges sorrindo, com camisa preta."
-        />
+        <img src="./assets/ft-pessoal.jpg" alt="Foto de Danilo Borges sorrindo, com camisa preta." />
         <h1>Danilo Borges</h1>
         <p>me localize nas redes abaixo</p>
       </div>
@@ -37,15 +32,11 @@
         </li>
 
         <li>
-          <a href="https://www.linkedin.com/in/daniloborgesf/" target="_blank"
-            >Linkedin</a
-          >
+          <a href="https://www.linkedin.com/in/daniloborgesf/" target="_blank">Linkedin</a>
         </li>
 
         <li>
-          <a href="https://www.instagram.com/daniloborgesf/" target="_blank"
-            >Instagram</a
-          >
+          <a href="https://www.instagram.com/daniloborgesf/" target="_blank">Instagram</a>
         </li>
       </ul>
 
@@ -70,16 +61,11 @@
     </div>
 
     <!-- scripts -->
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
-    ></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
-    ></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
     <script src="./script.js"></script>
   </body>
+
 </html>
